--- a/AndroidHostsEditor/AndroidHostsEditor.csproj
+++ b/AndroidHostsEditor/AndroidHostsEditor.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F95A362F-00D2-42F0-9E46-AC036BB0C7FE}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AdbHostsSetting</RootNamespace>
-    <AssemblyName>AdbHostsSetting</AssemblyName>
+    <RootNamespace>AndroidHostsEditor</RootNamespace>
+    <AssemblyName>AndroidHostsEditor</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
